[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pspkg.py"]

[tool.hatch.version]
path = "pspkg.py"

[project]
dynamic = ["version"]
name = "pspkg"
requires-python = ">=3.10"
authors = [
  {name = "Nicholas H.Tollervey", email = "ntoll@ntoll.org"}
]
maintainers = [
  {name = "Nicholas H.Tollervey", email = "ntoll@ntoll.org"}
]
description = "Check for package compatibility with PyScript."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = [
  "api",
  "pyscript",
  "packages",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: WebAssembly :: Emscripten",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Utilities",
]
dependencies = [
  "requests",
]

[project.scripts]
pspkg = "pspkg:main"

[project.optional-dependencies]
dev = [
    "build",
    "hatch",
    "black",
    "twine",
]

[project.urls]
Homepage = "https://github.com/pyscript/pspkg"
Repository = "https://github.com/pyscript/pspkg.git"